# ai-agricultural-intelligence-platform

./: Dockerfile  GOVERNANCE.md  Makefile  README.md  README_AGENT.md  azure-pipelines.yml  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: workflow_orchestrator.py
architecture/: README.md
benchmarks/: load_test.py  model_latency.py  pipeline_performance.py
bundle/: databricks.bundle.yml  databricks.yml
checklists/: demo_validation.md
config/: agents.yml  alerts.yml  analytics.yml  api.yml  campaigns.yml  conversation.yml  crops.yml  data_quality.yml  disease_rules.yml  economics.yml  environments.yml  farm.yml  farmer360.yml  features.yml  fertilizer.yml  genie.yml  governance.yml  govt_schemes.yml  insurance.yml  iot.yml  irrigation.yml  knowledge_registry.yml  market.yml  medallion.yml  mlops.yml  mobile.yml  mosaic_ai.yml  operations.yml  orchestration.yml  pest.yml  recommendation.yml  satellite.yml  soil.yml  supply_chain.yml  sustainability.yml  vision.yml  weather_sources.yml
dashboards/: cost_optimization.md  field_summary.json
datasets/: commodity_prices.csv  crop_calendar.csv  disease_catalog.csv  emission_factors.csv  farm_cost_reference.csv  farmer_profiles.csv  fertilizer_reference.csv  govt_schemes.csv  insurance_reference.csv  irrigation_reference.csv  pests.csv  sample_farm.json  sample_satellite_scenes.csv  warehouse_locations.csv
demo/: demo_pipeline.py  launcher.py  scenario_generator.py
deploy/: databricks_bundle.yml  healthcheck.py  rollback.md
docs/: API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  (+49 more)
(+357 files in other folders)
