[build-system]
requires=["setuptools>=75"]
build-backend="setuptools.build_meta"

[project]
name="ai-agricultural-intelligence-platform"
version="0.1.0"
requires-python=">=3.12"

dependencies=[
"pydantic>=2.11",
"pandas>=2.3",
"numpy>=2.3",
"pyarrow>=21.0",
"pyyaml>=6.0",
"requests>=2.32",
"rich>=14.0",
"typer>=0.16",
"loguru>=0.7"
]
